--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: "PLEX"
+title: "Inicio"
 ---
 <div class="header-wrap">
     <header class="containerHead header">
         <div class="row">
             <div class="col-md-12">
-                <div class="coverpost logo-text" style="background-image: url('/assets/backgrounds/plex.png')">
-                </div>
+              <!--  <div class="coverpost logo-text" style="background-image: url('/assets/backgrounds/plex.png')">
+                </div> -->
             </div>
         </div>
     </header>
@@ -34,7 +34,7 @@ title: "PLEX"
 
                             <div class="carousel-inner center">
                                 <div class="item active">
-                                    <a href=""><img id="slide" alt="img1" src="">
+                                    <a href=""><img id="slide" alt="img1" src="/assets/backgrounds/plex.png">
                                     <div class="carousel-caption">
                                         <h3>Imagen1</h3>
                                         <p>Descripcion</p>
