--- a/index.html
+++ b/index.html
@@ -106,10 +106,107 @@
         </div>
         <div id="section5" class="container-fluid">
             <h1>Inscripción</h1>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look
-                at the navigation bar while scrolling!</p>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look
-                at the navigation bar while scrolling!</p>
+            <form class="form-horizontal" action="https://formspree.io/plexprepa10@gmail.com" method="POST">
+                <fieldset>
+
+                    <!-- Form Name -->
+                    <legend>Inscripción a 1er nivel</legend>
+
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="nombre"></label>
+                        <div class="col-md-6">
+                            <input id="nombre" name="nombre" type="text" placeholder="Nombre(s)" class="form-control input-md" required="">
+
+                        </div>
+                    </div>
+
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="apellidos"></label>
+                        <div class="col-md-6">
+                            <input id="apellidos" name="apellidos" type="text" placeholder="Apellidos" class="form-control input-md" required="">
+
+                        </div>
+                    </div>
+
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="email"></label>
+                        <div class="col-md-6">
+                            <input id="email" name="email" type="text" placeholder="Correo Electronico" class="form-control input-md" required="">
+
+                        </div>
+                    </div>
+
+                    <!-- Multiple Radios -->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="carrera">Carrera</label>
+                        <div class="col-md-4">
+                            <div class="radio">
+                                <label for="carrera-0">
+      <input type="radio" name="carrera" id="carrera-0" value="BGC" checked="checked">
+      Bachillerato General
+    </label>
+                            </div>
+                            <div class="radio">
+                                <label for="carrera-1">
+      <input type="radio" name="carrera" id="carrera-1" value="Tecnico">
+      Carrera Tecnica
+    </label>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Multiple Radios (inline) -->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="semestre">Semestre</label>
+                        <div class="col-md-4">
+                            <label class="radio-inline" for="semestre-0">
+      <input type="radio" name="semestre" id="semestre-0" value="1" checked="checked">
+      1
+    </label>
+                            <label class="radio-inline" for="semestre-1">
+      <input type="radio" name="semestre" id="semestre-1" value="2">
+      2
+    </label>
+                            <label class="radio-inline" for="semestre-2">
+      <input type="radio" name="semestre" id="semestre-2" value="3">
+      3
+    </label>
+                            <label class="radio-inline" for="semestre-3">
+      <input type="radio" name="semestre" id="semestre-3" value="4">
+      4
+    </label>
+                            <label class="radio-inline" for="semestre-4">
+      <input type="radio" name="semestre" id="semestre-4" value="5">
+      5
+    </label>
+                            <label class="radio-inline" for="semestre-5">
+      <input type="radio" name="semestre" id="semestre-5" value="6">
+      6
+    </label>
+                            <label class="radio-inline" for="semestre-6">
+      <input type="radio" name="semestre" id="semestre-6" value="7">
+      7
+    </label>
+                            <label class="radio-inline" for="semestre-7">
+      <input type="radio" name="semestre" id="semestre-7" value="8">
+      8
+    </label>
+                        </div>
+                    </div>
+
+                    <!-- Button -->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for=""></label>
+                        <div class="col-md-4">
+                            <button id="" name="" class="btn btn-info">Registrarme</button>
+                        </div>
+                    </div>
+
+                </fieldset>
+            </form>
         </div>
         <div id="section6" class="container-fluid">
             <h1>Contacto</h1>
