--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
---- layout: default title: "Inicio" ---
+--- 
+layout: default
+title: "Inicio"
+---
 <div id="section1" class="container-fluid">
     <div class="col-md-12">
         <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
@@ -10,26 +13,26 @@
 
             <div class="carousel-inner center">
                 <div class="item active">
-                    <a href="/products/kefir"><img id="slide" alt="kefir" src="/assets/kefir.jpeg">
+                    <a href=""><img id="slide" alt="" src="">
                                 <div class="carousel-caption">
-                                    <h3>Tibicos</h3>
-                                    <p>Refrescante y versátil</p>
+                                    <h3></h3>
+                                    <p></p>
                                 </div>
                             </div>
 
                             <div class="item">
-                                <a href="/products//kombucha"><img id="slide" alt="kombucha" src="/assets/kombucha.jpeg">
+                                <a href=""><img id="slide" alt="" src="">
                                 <div class="carousel-caption">
-                                    <h3>Kombucha</h3>
-                                    <p>Deliciosa y funcional</p>
+                                    <h3></h3>
+                                    <p></p>
                                 </div>
                             </div>
 
                             <div class="item">
-                                <a href="/products/sauerkraut"><img id="slide" alt="sauerkraut" src="/assets/sauerkraut.jpeg">
+                                <a href=""><img id="slide" alt="" src="">
                                 <div class="carousel-caption">
-                                    <h3>Sauerkraut</h3>
-                                    <p>Acompañante de todos los platillos</p>
+                                    <h3></h3>
+                                    <p></p>
                                 </div>
                             </div>
                         </div>
