--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@ title: "Inicio"
                     <div class="form-group">
                         <label class="col-md-4 control-label" for=""></label>
                         <div class="col-md-4">
-                            <button id="" name="" class="btn btn-info">Registrarme</button>
+                            <button id="submit" name="submit" class="btn btn-info">Registrarme</button>
                         </div>
                     </div>
-
+                    
                 </fieldset>
             </form>
         </div>
