--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: "Inicio"
 
             <div class="carousel-inner center">
                 <div class="item active">
-                    <a href=""><img id="slide" alt="" src="">
+                    <img id="slide" alt="bienvenida" src="/assets/backgrounds/plex.png">
                                 <div class="carousel-caption">
                                     <h3></h3>
                                     <p></p>
@@ -21,10 +21,10 @@ title: "Inicio"
                             </div>
 
                             <div class="item">
-                                <a href=""><img id="slide" alt="" src="">
+                                <img id="slide" alt="graduacion" src="/assets/img/graduation.jpeg">
                                 <div class="carousel-caption">
-                                    <h3></h3>
-                                    <p></p>
+                                    <h3>Graduación 2017A</h3>
+                                    <p>Un momento para celebrar</p>
                                 </div>
                             </div>
 
@@ -119,7 +119,7 @@ title: "Inicio"
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="nombre"></label>
                         <div class="col-md-6">
-                            <input id="nombre" name="nombre" type="text" placeholder="Nombre(s)" class="form-control input-md" required="">
+                            <input id="nombre" name="Nombre" type="text" placeholder="Nombre(s)" class="form-control input-md" required="">
 
                         </div>
                     </div>
@@ -128,7 +128,7 @@ title: "Inicio"
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="apellidos"></label>
                         <div class="col-md-6">
-                            <input id="apellidos" name="apellidos" type="text" placeholder="Apellidos" class="form-control input-md" required="">
+                            <input id="apellidos" name="Apellidos" type="text" placeholder="Apellidos" class="form-control input-md" required="">
 
                         </div>
                     </div>
@@ -148,13 +148,13 @@ title: "Inicio"
                         <div class="col-md-4">
                             <div class="radio">
                                 <label for="carrera-0">
-      <input type="radio" name="carrera" id="carrera-0" value="BGC" checked="checked">
+      <input type="radio" name="Carrera" id="carrera-0" value="BGC" checked="checked">
       Bachillerato General
     </label>
                             </div>
                             <div class="radio">
                                 <label for="carrera-1">
-      <input type="radio" name="carrera" id="carrera-1" value="Tecnico">
+      <input type="radio" name="Carrera" id="carrera-1" value="Tecnico">
       Carrera Tecnica
     </label>
                             </div>
@@ -166,35 +166,35 @@ title: "Inicio"
                         <label class="col-md-4 control-label" for="semestre">Semestre</label>
                         <div class="col-md-4">
                             <label class="radio-inline" for="semestre-0">
-      <input type="radio" name="semestre" id="semestre-0" value="1" checked="checked">
+      <input type="radio" name="Semestre" id="semestre-0" value="1" checked="checked">
       1
     </label>
                             <label class="radio-inline" for="semestre-1">
-      <input type="radio" name="semestre" id="semestre-1" value="2">
+      <input type="radio" name="Semestre" id="semestre-1" value="2">
       2
     </label>
                             <label class="radio-inline" for="semestre-2">
-      <input type="radio" name="semestre" id="semestre-2" value="3">
+      <input type="radio" name="Semestre" id="semestre-2" value="3">
       3
     </label>
                             <label class="radio-inline" for="semestre-3">
-      <input type="radio" name="semestre" id="semestre-3" value="4">
+      <input type="radio" name="Semestre" id="semestre-3" value="4">
       4
     </label>
                             <label class="radio-inline" for="semestre-4">
-      <input type="radio" name="semestre" id="semestre-4" value="5">
+      <input type="radio" name="Semestre" id="semestre-4" value="5">
       5
     </label>
                             <label class="radio-inline" for="semestre-5">
-      <input type="radio" name="semestre" id="semestre-5" value="6">
+      <input type="radio" name="Semestre" id="semestre-5" value="6">
       6
     </label>
                             <label class="radio-inline" for="semestre-6">
-      <input type="radio" name="semestre" id="semestre-6" value="7">
+      <input type="radio" name="Semestre" id="semestre-6" value="7">
       7
     </label>
                             <label class="radio-inline" for="semestre-7">
-      <input type="radio" name="semestre" id="semestre-7" value="8">
+      <input type="radio" name="Semestre" id="semestre-7" value="8">
       8
     </label>
                         </div>
@@ -204,7 +204,7 @@ title: "Inicio"
                     <div class="form-group">
                         <label class="col-md-4 control-label" for=""></label>
                         <div class="col-md-4">
-                            <button id="submit" name="submit" class="btn btn-info">Registrarme</button>
+                            <button id="submit" class="btn btn-info">Registrarme</button>
                         </div>
                     </div>
                     
@@ -224,7 +224,7 @@ title: "Inicio"
                         fjs.parentNode.insertBefore(js, fjs);
                     }(document, 'script', 'facebook-jssdk'));
                 </script>
-                <div class="fb-like-box" data-href="https://www.facebook.com//" data-width="280" data-height="320" data-colorscheme="light"
+                <div class="fb-like-box" data-href="https://www.facebook.com/ProgramaLenguaExtranjera/" data-width="280" data-height="320" data-colorscheme="light"
                     data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
                 <div style="text-align: center" class="hidden-sm hidden-xs">
                 </div>
