--- a/index.html
+++ b/index.html
@@ -1,41 +1,16 @@
 --- 
-layout: default
-title: "Inicio"
+layout: default  
 ---
 <div id="section1" class="container-fluid">
-    <div class="col-md-12">
-        <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-
+    <div class="col-md-8 carousel-border center hidden-sm hidden-xs firstcarousel">
+        <div id="myCarousel" class="carousel slide border-carousel" data-interval="3000" data-ride="carousel">
             <div class="carousel-inner center">
                 <div class="item active">
                     <img id="slide" alt="bienvenida" src="/assets/backgrounds/plex.png">
-                                <div class="carousel-caption">
-                                    <h3></h3>
-                                    <p></p>
-                                </div>
-                            </div>
-
-                            <div class="item">
-                                <img id="slide" alt="graduacion" src="/assets/img/graduation.jpeg">
-                                <div class="carousel-caption">
-                                    <h3>Graduación 2017A</h3>
-                                    <p>Un momento para celebrar</p>
-                                </div>
-                            </div>
-
-                            <div class="item">
-                                <a href=""><img id="slide" alt="" src="">
-                                <div class="carousel-caption">
-                                    <h3></h3>
-                                    <p></p>
-                                </div>
-                            </div>
-                        </div>
+                </div>
+                <div class="item">
+                    <img id="slide" alt="graduacion" src="/assets/img/graduation.jpeg">
+                </div>
                                 <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                                     <span class="glyphicon glyphicon-chevron-left"></span>
                                 </a>
@@ -111,103 +86,69 @@ title: "Inicio"
             <h1>Inscripción</h1>
             <form class="form-horizontal" action="https://formspree.io/plexprepa10@gmail.com" method="POST">
                 <fieldset>
-
-                    <!-- Form Name -->
                     <legend>Inscripción a 1er nivel</legend>
-
-                    <!-- Text input-->
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="nombre"></label>
                         <div class="col-md-6">
                             <input id="nombre" name="Nombre" type="text" placeholder="Nombre(s)" class="form-control input-md" required="">
-
                         </div>
                     </div>
-
-                    <!-- Text input-->
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="apellidos"></label>
                         <div class="col-md-6">
                             <input id="apellidos" name="Apellidos" type="text" placeholder="Apellidos" class="form-control input-md" required="">
-
                         </div>
                     </div>
-
-                    <!-- Text input-->
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="email"></label>
                         <div class="col-md-6">
                             <input id="email" name="email" type="text" placeholder="Correo Electronico" class="form-control input-md" required="">
-
                         </div>
                     </div>
-
-                    <!-- Multiple Radios -->
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="carrera">Carrera</label>
                         <div class="col-md-4">
                             <div class="radio">
                                 <label for="carrera-0">
-      <input type="radio" name="Carrera" id="carrera-0" value="BGC" checked="checked">
-      Bachillerato General
-    </label>
+                                    <input type="radio" name="Carrera" id="carrera-0" value="BGC" checked="checked">
+                                    Bachillerato General
+                                </label>
                             </div>
                             <div class="radio">
                                 <label for="carrera-1">
-      <input type="radio" name="Carrera" id="carrera-1" value="Tecnico">
-      Carrera Tecnica
-    </label>
+                                    <input type="radio" name="Carrera" id="carrera-1" value="Tecnico">
+                                    Carrera Tecnica
+                                </label>
                             </div>
                         </div>
                     </div>
-
-                    <!-- Multiple Radios (inline) -->
                     <div class="form-group">
                         <label class="col-md-4 control-label" for="semestre">Semestre</label>
                         <div class="col-md-4">
                             <label class="radio-inline" for="semestre-0">
-      <input type="radio" name="Semestre" id="semestre-0" value="1" checked="checked">
-      1
-    </label>
+                                <input type="radio" name="Semestre" id="semestre-0" value="1" checked="checked">1</label>
                             <label class="radio-inline" for="semestre-1">
-      <input type="radio" name="Semestre" id="semestre-1" value="2">
-      2
-    </label>
+                                <input type="radio" name="Semestre" id="semestre-1" value="2">2</label>
                             <label class="radio-inline" for="semestre-2">
-      <input type="radio" name="Semestre" id="semestre-2" value="3">
-      3
-    </label>
+                                <input type="radio" name="Semestre" id="semestre-2" value="3">3</label>
                             <label class="radio-inline" for="semestre-3">
-      <input type="radio" name="Semestre" id="semestre-3" value="4">
-      4
-    </label>
+                                <input type="radio" name="Semestre" id="semestre-3" value="4">4</label>
                             <label class="radio-inline" for="semestre-4">
-      <input type="radio" name="Semestre" id="semestre-4" value="5">
-      5
-    </label>
+                                <input type="radio" name="Semestre" id="semestre-4" value="5">5</label>
                             <label class="radio-inline" for="semestre-5">
-      <input type="radio" name="Semestre" id="semestre-5" value="6">
-      6
-    </label>
+                                <input type="radio" name="Semestre" id="semestre-5" value="6">6</label>
                             <label class="radio-inline" for="semestre-6">
-      <input type="radio" name="Semestre" id="semestre-6" value="7">
-      7
-    </label>
+                                <input type="radio" name="Semestre" id="semestre-6" value="7">7</label>
                             <label class="radio-inline" for="semestre-7">
-      <input type="radio" name="Semestre" id="semestre-7" value="8">
-      8
-    </label>
+                                <input type="radio" name="Semestre" id="semestre-7" value="8">8</label>
                         </div>
                     </div>
-
-                    <!-- Button -->
                     <div class="form-group">
                         <label class="col-md-4 control-label" for=""></label>
                         <div class="col-md-4">
                             <button id="submit" class="btn btn-info">Registrarme</button>
                         </div>
                     </div>
-                    
                 </fieldset>
             </form>
         </div>
@@ -224,8 +165,8 @@ title: "Inicio"
                         fjs.parentNode.insertBefore(js, fjs);
                     }(document, 'script', 'facebook-jssdk'));
                 </script>
-                <div class="fb-like-box" data-href="https://www.facebook.com/ProgramaLenguaExtranjera/" data-width="280" data-height="320" data-colorscheme="light"
-                    data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
+                <div class="fb-like-box" data-href="https://www.facebook.com/ProgramaLenguaExtranjera/" data-width="280" data-height="320"
+                    data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
                 <div style="text-align: center" class="hidden-sm hidden-xs">
                 </div>
             </div>
