--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ layout: default
                 </div>
             </div>
         </div>
+ </div>
         <div id="section2" class="container-fluid">
             <h1>¿Quienes somos?</h1>
             <div class="col-md-4">
