--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 layout: default  
 ---
 <div id="section1" class="container-fluid">
-    <div class="col-md-8 carousel-border center hidden-sm hidden-xs firstcarousel">
-        <div id="myCarousel" class="carousel slide border-carousel" data-interval="3000" data-ride="carousel">
-            <div class="carousel-inner center">
-                <div class="item active">
+    <div class="col-md-8 hidden-sm hidden-xs firstcarousel">
+        <div id="myCarousel" class="carousel slide bordercarousel" data-interval="3000" data-ride="carousel">
+            <div class="carousel-inner inner">
+                <div class="item slidesize active">
                     <img id="slide" alt="bienvenida" src="/assets/backgrounds/plex.png">
                 </div>
-                <div class="item">
+                <div class="item slidesize">
                     <img id="slide" alt="graduacion" src="/assets/img/graduation.jpeg">
                 </div>
                                 <a class="left carousel-control" href="#myCarousel" data-slide="prev">
