--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 --- 
-layout: default  
+layout: default
+title: Programa de Lengua Extranjera
 ---
 <div id="section1" class="container-fluid">
     <div class="col-md-8 hidden-sm hidden-xs firstcarousel">
