--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ title: Programa de Lengua Extranjera
             </div>
         </div>
  </div>
+ <hr class="spikes">
         <div id="section2" class="container-fluid">
             <h1>¿Quienes somos?</h1>
             <div class="col-md-4">
