--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 --- 
 layout: default
-title: Programa de Lengua Extranjera
+title: PLEX
 ---
 <div id="section1" class="container-fluid">
     <div class="col-md-8 hidden-sm hidden-xs firstcarousel">
