--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
---- 
+---
 layout: default
-title: PLEX
+title: PLEX 
 ---
 <div id="section1" class="container-fluid">
     <div class="col-md-8 hidden-sm hidden-xs firstcarousel">
@@ -12,165 +12,192 @@ title: PLEX
                 <div class="item slidesize">
                     <img id="slide" alt="graduacion" src="/assets/img/graduation.jpeg">
                 </div>
-                                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                                     <span class="glyphicon glyphicon-chevron-left"></span>
                                 </a>
-                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
                                     <span class="glyphicon glyphicon-chevron-right"></span>
                                 </a>
-                </div>
             </div>
         </div>
- </div>
- <hr>
-        <div id="section2" class="container-fluid">
-            <h1>¿Quienes somos?</h1>
-            <div class="col-md-4">
-                <div class="about border">
-                    <h4>Misión</h4>
-                    <p>
-                        Descripcion
-                    </p>
+    </div>
+</div>
+<hr>
+<div id="section2" class="container-fluid">
+    <div class="col-md-12">
+        <h1>¿Quienes somos?</h1>
+        <p>--descripción--</p>
+    </div>
+    <div class="col-md-4">
+        <div class="about border">
+            <h4>Misión</h4>
+            <p>
+                Descripcion
+            </p>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="about border">
+            <h4>Visión</h4>
+            <p>
+                Descripcion
+            </p>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="about border">
+            <h4>Valores</h4>
+            <p>
+                Descripcion
+            </p>
+        </div>
+    </div>
+</div>
+<div id="section3" class="container-fluid">
+    <h1>Niveles</h1>
+    <div class="col-md-12">
+        <p>
+            Descripción del Programa
+        </p>
+    </div>
+    <div class="col-md-6">
+        <div class="about border blockb">
+            <h4>Bloque Azúl</h4>
+            <p>
+                Descripcion
+            </p>
+            <a href="#section41" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="about border blockp">
+            <h4>Bloque Morado</h4>
+            <p>
+                Descripcion
+            </p>
+            <a href="#section42" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="about border blockg">
+            <h4>Bloque Verde</h4>
+            <p>
+                Descripcion
+            </p>
+            <a href="#section43" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="about border blockr">
+            <h4>Bloque Café</h4>
+            <p>
+                Descripcion
+            </p>
+            <a href="#section44" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
+        </div>
+    </div>
+</div>
+<div id="section41" class="container-fluid">
+    <h1>Bloque Azúl</h1>
+    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
+        navigation bar while scrolling!</p>
+    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
+        navigation bar while scrolling!</p>
+</div>
+<div id="section42" class="container-fluid">
+    <h1>Bloque Morado</h1>
+    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
+        navigation bar while scrolling!</p>
+    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
+        navigation bar while scrolling!</p>
+</div>
+<div id="section43" class="container-fluid">
+    <h1>Bloque Verde</h1>
+    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
+        navigation bar while scrolling!</p>
+    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
+        navigation bar while scrolling!</p>
+</div>
+<div id="section44" class="container-fluid">
+    <h1>Bloque Café</h1>
+    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
+        navigation bar while scrolling!</p>
+    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
+        navigation bar while scrolling!</p>
+</div>
+<div id="section5" class="container-fluid">
+    <h1>Inscripción</h1>
+    <div class="col-md-8">
+    <form class="form-horizontal" action="https://formspree.io/plexprepa10@gmail.com" method="POST">
+        <fieldset>
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="nombre"></label>
+                <div class="col-md-6">
+                    <input id="nombre" name="Nombre" type="text" placeholder="Nombre(s)" class="form-control input-md" required="">
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="about border">
-                    <h4>Visión</h4>
-                    <p>
-                        Descripcion
-                    </p>
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="apellidos"></label>
+                <div class="col-md-6">
+                    <input id="apellidos" name="Apellidos" type="text" placeholder="Apellidos" class="form-control input-md" required="">
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="about border">
-                    <h4>Valores</h4>
-                    <p>
-                        Descripcion
-                    </p>
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="email"></label>
+                <div class="col-md-6">
+                    <input id="email" name="email" type="text" placeholder="Correo Electronico" class="form-control input-md" required="">
                 </div>
             </div>
-        </div>
-        <div id="section3" class="container-fluid">
-            <h1>Niveles</h1>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look
-                at the navigation bar while scrolling!</p>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look
-                at the navigation bar while scrolling!</p>
-        </div>
-        <div id="section41" class="container-fluid">
-            <h1>Bloque Azúl</h1>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look
-                at the navigation bar while scrolling!</p>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look
-                at the navigation bar while scrolling!</p>
-        </div>
-        <div id="section42" class="container-fluid">
-            <h1>Bloque Morado</h1>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look
-                at the navigation bar while scrolling!</p>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look
-                at the navigation bar while scrolling!</p>
-        </div>
-        <div id="section43" class="container-fluid">
-            <h1>Bloque Verde</h1>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look
-                at the navigation bar while scrolling!</p>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look
-                at the navigation bar while scrolling!</p>
-        </div>
-        <div id="section44" class="container-fluid">
-            <h1>Bloque Café</h1>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look
-                at the navigation bar while scrolling!</p>
-            <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look
-                at the navigation bar while scrolling!</p>
-        </div>
-        <div id="section5" class="container-fluid">
-            <h1>Inscripción</h1>
-            <form class="form-horizontal" action="https://formspree.io/plexprepa10@gmail.com" method="POST">
-                <fieldset>
-                    <legend>Inscripción a 1er nivel</legend>
-                    <div class="form-group">
-                        <label class="col-md-4 control-label" for="nombre"></label>
-                        <div class="col-md-6">
-                            <input id="nombre" name="Nombre" type="text" placeholder="Nombre(s)" class="form-control input-md" required="">
-                        </div>
+                <div class="form-group">
+                <label class="col-md-4 control-label" for="Carrera">Carrera</label>
+                    <div class="col-md-4">
+                        <select id="Carrera" name="Carrera" class="form-control">
+                        <option value="BGC">Bachillerato General</option>
+                        <option value="Técnica">Carrera Técnica</option>
+                        </select>
                     </div>
-                    <div class="form-group">
-                        <label class="col-md-4 control-label" for="apellidos"></label>
-                        <div class="col-md-6">
-                            <input id="apellidos" name="Apellidos" type="text" placeholder="Apellidos" class="form-control input-md" required="">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-4 control-label" for="email"></label>
-                        <div class="col-md-6">
-                            <input id="email" name="email" type="text" placeholder="Correo Electronico" class="form-control input-md" required="">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-4 control-label" for="carrera">Carrera</label>
-                        <div class="col-md-4">
-                            <div class="radio">
-                                <label for="carrera-0">
-                                    <input type="radio" name="Carrera" id="carrera-0" value="BGC" checked="checked">
-                                    Bachillerato General
-                                </label>
-                            </div>
-                            <div class="radio">
-                                <label for="carrera-1">
-                                    <input type="radio" name="Carrera" id="carrera-1" value="Tecnico">
-                                    Carrera Tecnica
-                                </label>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-4 control-label" for="semestre">Semestre</label>
-                        <div class="col-md-4">
-                            <label class="radio-inline" for="semestre-0">
-                                <input type="radio" name="Semestre" id="semestre-0" value="1" checked="checked">1</label>
-                            <label class="radio-inline" for="semestre-1">
-                                <input type="radio" name="Semestre" id="semestre-1" value="2">2</label>
-                            <label class="radio-inline" for="semestre-2">
-                                <input type="radio" name="Semestre" id="semestre-2" value="3">3</label>
-                            <label class="radio-inline" for="semestre-3">
-                                <input type="radio" name="Semestre" id="semestre-3" value="4">4</label>
-                            <label class="radio-inline" for="semestre-4">
-                                <input type="radio" name="Semestre" id="semestre-4" value="5">5</label>
-                            <label class="radio-inline" for="semestre-5">
-                                <input type="radio" name="Semestre" id="semestre-5" value="6">6</label>
-                            <label class="radio-inline" for="semestre-6">
-                                <input type="radio" name="Semestre" id="semestre-6" value="7">7</label>
-                            <label class="radio-inline" for="semestre-7">
-                                <input type="radio" name="Semestre" id="semestre-7" value="8">8</label>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-4 control-label" for=""></label>
-                        <div class="col-md-4">
-                            <button id="submit" class="btn btn-info">Registrarme</button>
-                        </div>
-                    </div>
-                </fieldset>
-            </form>
-        </div>
-        <div id="section6" class="container-fluid">
-            <h1>Contacto</h1>
-            <div class="row">
-                <div class="col-md-4" <div id="fb-root"></div>
-                <script>
-                    (function (d, s, id) {
-                        var js, fjs = d.getElementsByTagName(s)[0];
-                        if (d.getElementById(id)) return;
-                        js = d.createElement(s); js.id = id;
-                        js.src = "//connect.facebook.net/es_MX/sdk.js#xfbml=1&version=v2.0";
-                        fjs.parentNode.insertBefore(js, fjs);
-                    }(document, 'script', 'facebook-jssdk'));
-                </script>
-                <div class="fb-like-box" data-href="https://www.facebook.com/ProgramaLenguaExtranjera/" data-width="280" data-height="320"
-                    data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
-                <div style="text-align: center" class="hidden-sm hidden-xs">
+                </div>
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="Semestre">Semestre</label>
+                <div class="col-md-4">
+                    <select id="Semestre" name="Semestre" class="form-control">
+                    <option value="1">Primero</option>
+                    <option value="2">Segundo</option>
+                    <option value="3">Tercero</option>
+                    <option value="4">Cuarto</option>
+                    <option value="5">Quinto</option>
+                    <option value="6">Sexto</option>
+                    <option value="7">Séptimo</option>
+                    <option value="8">Octavo</option>
+                    </select>
                 </div>
             </div>
+            <div class="form-group">
+                <label class="col-md-4 control-label" for=""></label>
+                <div class="col-md-4">
+                    <button id="submit" class="btn btn-info">Registrarme</button>
+                </div>
+            </div>
+        </fieldset>
+    </form>
+    </div>
+</div>
+<div id="section6" class="container-fluid">
+    <h1>Contacto</h1>
+    <div class="row">
+        <div class="col-md-4" <div id="fb-root"></div>
+        <script>
+            (function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/es_MX/sdk.js#xfbml=1&version=v2.0";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
+        <div class="fb-like-box" data-href="https://www.facebook.com/ProgramaLenguaExtranjera/" data-width="280" data-height="320"
+            data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="true"></div>
+        <div style="text-align: center" class="hidden-sm hidden-xs">
         </div>
+    </div>
+</div>
