Color and size changes

--- a/index.html
+++ b/index.html
@@ -127,7 +127,13 @@ title: PLEX
 </div>
 <div id="section5" class="container-fluid">
     <h1>Inscripción</h1>
-    <div class="col-md-8">
+    <div class="col-md-4">
+        <p>
+            Texto
+        </p>
+    </div>
+    <div class="col-md-8 right">
+        <h3>Formulario para primer nivel</h3>
     <form class="form-horizontal" action="https://formspree.io/plexprepa10@gmail.com" method="POST">
         <fieldset>
             <div class="form-group">
