--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ title: PLEX
             Texto
         </p>
     </div>
-    <div class="col-md-8 right">
+    <div class="col-md-8 wood">
         <h3>Formulario para primer nivel</h3>
     <form class="form-horizontal" action="https://formspree.io/plexprepa10@gmail.com" method="POST">
         <fieldset>
