--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: PLEX 
 ---
-<div id="section1" class="container-fluid">
+<div id="Home" class="container-fluid">
     <div class="col-md-8 hidden-sm hidden-xs firstcarousel">
         <div id="myCarousel" class="carousel slide bordercarousel" data-interval="3000" data-ride="carousel">
             <div class="carousel-inner inner">
@@ -23,7 +23,7 @@ title: PLEX
     </div>
 </div>
 <hr>
-<div id="section2" class="container-fluid">
+<div id="AboutUs" class="container-fluid">
     <div class="col-md-12">
         <h1>¿Quienes somos?</h1>
         <p>--descripción--</p>
@@ -53,7 +53,7 @@ title: PLEX
         </div>
     </div>
 </div>
-<div id="section3" class="container-fluid">
+<div id="Levels" class="container-fluid">
     <h1>Niveles</h1>
     <div class="col-md-12">
         <p>
@@ -66,7 +66,7 @@ title: PLEX
             <p>
                 Descripcion
             </p>
-            <a href="#section41" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
+            <a href="#Blue" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
         </div>
     </div>
     <div class="col-md-6">
@@ -75,7 +75,7 @@ title: PLEX
             <p>
                 Descripcion
             </p>
-            <a href="#section42" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
+            <a href="#Purple" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
         </div>
     </div>
     <div class="col-md-6">
@@ -84,7 +84,7 @@ title: PLEX
             <p>
                 Descripcion
             </p>
-            <a href="#section43" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
+            <a href="#Green" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
         </div>
     </div>
     <div class="col-md-6">
@@ -93,39 +93,39 @@ title: PLEX
             <p>
                 Descripcion
             </p>
-            <a href="#section44" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
+            <a href="#Brown" class="btn btn-primary btn-warning"><span class="glyphicon glyphicon-info-sign"></span> Más información</a>
         </div>
     </div>
 </div>
-<div id="section41" class="container-fluid">
+<div id="Blue" class="container-fluid">
     <h1>Bloque Azúl</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
-<div id="section42" class="container-fluid">
+<div id="Purple" class="container-fluid">
     <h1>Bloque Morado</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
-<div id="section43" class="container-fluid">
+<div id="Green" class="container-fluid">
     <h1>Bloque Verde</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
-<div id="section44" class="container-fluid">
+<div id="Brown" class="container-fluid">
     <h1>Bloque Café</h1>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
     <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the
         navigation bar while scrolling!</p>
 </div>
-<div id="section5" class="container-fluid">
+<div id="Inscription" class="container-fluid">
     <h1>Inscripción</h1>
     <div class="col-md-4">
         <p>
@@ -188,7 +188,7 @@ title: PLEX
     </form>
     </div>
 </div>
-<div id="section6" class="container-fluid">
+<div id="ContactUs" class="container-fluid">
     <h1>Contacto</h1>
     <div class="row">
         <div class="col-md-4" <div id="fb-root"></div>
